wp/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql # Moet dezelfde zijn als in deployment.yaml
spec:
  selector:
    app: mysql
  type: ClusterIP
  ports:
  - name: mysql
    protocol: TCP
    port: 3306 #listing port 
    targetPort:  3306 #forwarding port, 80 omdat 80 in deployment.yaml
